<resources>
    <string name="app_name">FbMty</string>

    <!-- URLS -->
    <string name="url_qa">http://fibramty.hics.mx/</string>
    <string name="url_prod">http://fibramty.hics.mx/</string>


    <!-- Generic Text-->
    <string name="accept">Aceptar</string>
    <string name="reject">Rechazar</string>
    <string name="sent">Enviar</string>
    <string name="cancel">Cancelar</string>
    <string name="reason">Comentarios</string>
    <string name="dialog_error_memory_low">La aplicación se está quedando sin memoria, por favor cierra las demás aplicaciones para un correcto funcionamiento</string>
    <string name="network_error">No hay conexión a Internet</string>
    <string name="not_results">Sin resultados</string>
    <string name="results">Resultados</string>
    <string name="empty_list">No hay requisiciones</string>
    <string name="form_pick_files">Selecciona el archivo</string>
    <string name="price">$ %d</string>
    <string name="validate_field">%s es requerido</string>
    <string name="involved_name" formatted="false">\u2022 %s</string>
    <string name="close_sesion">Cerrar Sesión</string>
    <string name="text_version_complete">Version:  %s</string>
    <string name="text_version">V %s</string>
    <string name="content_description">Fibra Monterrey</string>
    <string name="msg_success">%s exitoso</string>
    <string name="request">Solicitar</string>

    <!-- Login Acitivity -->
    <string name="act_login_edt_user">Usuario</string>
    <string name="act_login_edt_password">Contraseña</string>
    <string name="act_login_btn_login">Ingresar</string>
    <string name="act_login_btn_recovery_pwd">Recuperar su contraseña</string>
    <string name="act_login_btn_register">¿No tiene cuenta? Registrese aquí</string>


    <!-- Register Activity -->
    <string name="act_register_email">Correo Electrónico</string>
    <string name="act_register_pass">Contraseña</string>
    <string name="act_register_confirm_pass">Confirmar Contraseña</string>
    <string name="act_register_rfc">RFC</string>
    <string name="act_regiter_num_client">Número de Cliente</string>
    <string name="act_register_btn">Registrar</string>
    <string name="act_register_not_pass_equals">No coinciden las contraseñas</string>

    <!-- Recovery Password Activity-->
    <string name="act_recovery_title">Recuperar Contraseña</string>
    <string name="act_recovery_email">Correo Electrónico</string>
    <!-- Consulta de Pagos -->
    <string name="consulta_de_pagos">Consulta de pagos</string>
    <string name="view_360">Multimedia</string>
    <string name="ticket">Ticket</string>
    <string name="mantenimiento">Mantenimiento</string>
    <string name="numero_de_documento">Número de documento</string>
    <string name="fecha_de_contabilizaci_n">Fecha de contabilización</string>
    <string name="importe_en_moneda_de_documento">Importe en moneda de documento</string>
    <string name="amount">Monto</string>
    <string name="descripci_n">Descripción</string>
    <string name="edificio">Edificio</string>
    <string name="type_docto">Tipo documento</string>
    <string name="status">Estatus</string>
    <string name="proveedor">Proveedor</string>
    <string name="name">Nombre</string>
    <string name="phone">Teléfono</string>
    <string name="mobile">Celular</string>
    <string name="email">Correo electrónico</string>
    <string name="description">Explicación</string>
    <string name="frequency">Frecuencia</string>
    <string name="search_file">Examinar</string>
    <string name="date_request">Fecha Solicitud</string>
    <string name="date">Fecha</string>
    <string name="no_ticket">No. Ticket</string>
    <string name="observations_admin">Observaciones del Administrador</string>
    <string name="delete">Eliminar</string>
    <string name="payed">Pagada</string>
    <string name="not_payed">No pagada</string>


    <!--Titles bottom nav item -->
    <string name="item_1">Servicios</string>
    <string name="item_2">Mi Espacio</string>
    <string name="item_3">Mi Perfil</string>
    <string name="item_4">Salir</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Characteristics Fragment -->
    <string name="date_built">Fecha de Construcción</string>
    <string name="architect">Arquitecto</string>
    <string name="floor_builts">Pisos Construidos</string>
    <string name="total_area">Área Total</string>
    <string name="parkings">Cajones de Estacionamiento</string>
    <string name="activities_building">Actividades del Edificio</string>
    <string name="administrador_data">Datos del Administrador</string>
    <string name="name_administrator">Nombre</string>
    <string name="email_administrator">Correo electrónico</string>
    <string name="phone_administrator">Número telefónico</string>

    <!--Downloads Fragment -->
    <string name="architect_plans">Planos Arquitectónicos</string>
    <string name="contingency_plans">Planes de Contingencia</string>
    <string name="title_activity_location_fragment">Ubicación</string>

    <!--Profile Account -->
    <string name="account">Cuenta</string>
    <string name="buildings">Edificios</string>
    <string name="select_holding">Seleccionar edificio</string>

    <!--Sevices Item -->
    <string name="rent">Renta</string>
    <string name="mtto">Mtto.</string>

    <!--Services Data -->
    <string name="numTicket">No. Ticket</string>
    <string name="name_item">Nombre</string>
    <string name="boxes">Cajones</string>
    <string name="detail">Ver detalle</string>
    <string name="request_item">Solicitud</string>
    <string name="action_realized">Acción</string>
    <string name="num_request_rent">No. Solicitudes Renta</string>
    <string name="num_request_mtto">No. Solicitudes Mantenimiento</string>
    <!--Parkings Request -->
    <string name="request_parkings">Solicitud de Cajones de Estacionamiento</string>
    <string name="request_cards">Solicitud de Tarjetas de Estacionamiento</string>
    <string name="request_courtesies">Solicitud de Cortesias</string>
    <string name="action">Acción Deseada</string>
    <string name="addParkings">Agregar cajones</string>
    <string name="deleteParkings">Eliminar cajones</string>
    <string name="parkingType">Tipo de Cajón</string>
    <string name="contract">Contrato</string>
    <string name="aditionals">Adicionales</string>
    <string name="placeType">Tipo de Lugar</string>
    <string name="pool">Pool</string>
    <string name="reserved">Reservado</string>
    <string name="parkingsxrent">Cajones Requeridos Renta</string>
    <string name="rentPrice">Precio Renta</string>
    <string name="parkingsmtto">Cajones Requeridos Mantenimiento</string>
    <string name="mttoPrice">Precio Mantenimiento</string>
    <string name="cardType">Tipo de Tarjeta</string>
    <string name="cardnormal">Normal</string>
    <string name="cardmastertag">Tag Master</string>
    <string name="cardsxrent">Tarjetas Requeridos Renta</string>
    <string name="courtesies">Cortesias Requeridos Renta</string>
    <string name="num_boxes">%d Cajones</string>
    <string name="num_cards">%d Tarjetas</string>
    <string name="num_courtesies">%d Cortesias</string>


</resources>
