<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fibramty.fbmty.View.Fragment.ParkingsRequest"
    android:background="@color/gray_background"
    >
<android.support.v4.widget.NestedScrollView
    android:id="@+id/fr_parkings_request_nscroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_eigth">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/fr_parkings_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_eigth">
        </android.support.v7.widget.RecyclerView>
        <View
            android:id="@+id/fr_parkings_divider"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="@dimen/margin_eigth"
            android:layout_marginBottom="@dimen/margin_eigth"
            android:background="@color/silver"
            android:layout_below="@id/fr_parkings_recycler"
            />
        <TextView
            android:id="@+id/fr_parkings_title_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/request_parkings"
            style="@style/font_body_light_blue"
            android:textSize="@dimen/font_size_14"
            android:layout_below="@id/fr_parkings_divider"
            android:layout_marginTop="@dimen/margin_eigth"
            android:layout_marginBottom="@dimen/margin_eigth"/>


        <android.support.v7.widget.CardView
            android:id="@+id/fr_parkings_card_short_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_below="@id/fr_parkings_title_instructions"
            android:visibility="visible"
            android:layout_marginBottom="@dimen/margin_four"
            android:layout_marginTop="@dimen/margin_four">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_eigth">
                <TextView
                    android:id="@+id/cardType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cardType"
                    style="@style/font_title"/>
                <RadioGroup
                    android:id="@+id/fr_parking_rgb_cardType"
                    android:layout_below="@id/cardType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="@dimen/margin_six"
                    android:weightSum="1">
                    <RadioButton
                        android:id="@+id/fr_parkings_rgb_normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cardnormal"
                        android:checked="true"
                        android:layout_weight=".5"/>
                    <RadioButton
                        android:id="@+id/fr_parkings_rgb_tag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cardmastertag"
                        android:layout_weight=".5"/>
                </RadioGroup>


                <TextView
                    android:id="@+id/title_cardsxrent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cardsxrent"
                    style="@style/font_title"
                    android:layout_marginTop="@dimen/margin_four"
                    android:layout_below="@id/fr_parking_rgb_cardType"/>

                <EditText
                    android:id="@+id/fr_parkings_edt_cards_rent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:layout_below="@id/title_cardsxrent" />

                <TextView
                    android:id="@+id/title_pricexcard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rentPrice"
                    style="@style/font_title"
                    android:layout_marginTop="@dimen/margin_four"
                    android:layout_below="@id/fr_parkings_edt_cards_rent"/>

                <EditText
                    android:id="@+id/fr_parkings_edt_price_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:focusable="false"
                    android:enabled="false"
                    android:layout_below="@id/title_pricexcard" />

                <Button
                    android:id="@+id/fr_parkings_btn_card_request"
                    style="@style/BlueButton"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:layout_alignStart="@+id/fr_parkings_btn_request_card_cancel"
                    android:layout_below="@+id/fr_parkings_edt_price_card"
                    android:layout_marginTop="30dp"
                    android:elevation="@dimen/raised_button"
                    android:text="@string/request" />

                <Button
                    android:id="@+id/fr_parkings_btn_request_card_cancel"
                    style="@style/BlueButtonStroke"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:layout_marginStart="@dimen/margin_twelve"
                    android:layout_marginEnd="@dimen/margin_twelve"
                    android:layout_marginTop="@dimen/margin_two"
                    android:layout_marginBottom="@dimen/margin_sixteen"
                    android:elevation="@dimen/raised_button"
                    android:text="@string/cancel"
                    android:layout_below="@id/fr_parkings_btn_card_request"
                    />

            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/fr_parkings_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_below="@id/fr_parkings_title_instructions"
            android:layout_marginBottom="@dimen/margin_four"
            android:layout_marginTop="@dimen/margin_four"
            android:visibility="gone"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_eigth">
                <TextView
                    android:id="@+id/action"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/action"
                    style="@style/font_title"/>
                <RadioGroup
                    android:id="@+id/fr_parking_rgb_action"
                    android:layout_below="@id/action"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="@dimen/margin_six"
                    android:weightSum="1">
                    <RadioButton
                        android:id="@+id/fr_parkings_rgb_add"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/addParkings"
                        android:checked="true"
                        android:layout_weight=".5"/>
                    <RadioButton
                        android:id="@+id/fr_parkings_rgb_delete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/deleteParkings"
                        android:layout_weight=".5"/>
                </RadioGroup>
                <TextView
                    android:id="@+id/box_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/parkingType"
                    android:layout_below="@id/fr_parking_rgb_action"
                    style="@style/font_title"/>
                <RadioGroup
                    android:id="@+id/fr_parking_rgb_box"
                    android:layout_below="@id/box_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="@dimen/margin_six"
                    android:weightSum="1">
                    <RadioButton
                        android:id="@+id/fr_parkings_rgb_contract"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contract"
                        android:checked="true"
                        android:layout_weight=".5"/>
                    <RadioButton
                        android:id="@+id/fr_parkings_rgb_aditionals"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/aditionals"
                        android:layout_weight=".5"/>
                </RadioGroup>
                <TextView
                    android:id="@+id/place_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/placeType"
                    android:layout_below="@id/fr_parking_rgb_box"
                    style="@style/font_title"/>
                <RadioGroup
                    android:id="@+id/fr_parking_rgb_place"
                    android:layout_below="@id/place_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="@dimen/margin_six"
                    android:weightSum="1">
                    <RadioButton
                        android:id="@+id/fr_parkings_rgb_pool"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pool"
                        android:checked="true"
                        android:layout_weight=".5"/>
                    <RadioButton
                        android:id="@+id/fr_parkings_rgb_reserved"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reserved"
                        android:layout_weight=".5"/>
                </RadioGroup>

                <TextView
                    android:id="@+id/title_parkingxrent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/parkingsxrent"
                    style="@style/font_title"
                    android:layout_marginTop="@dimen/margin_four"
                    android:layout_below="@id/fr_parking_rgb_place"/>

                <EditText
                    android:id="@+id/fr_parkings_edt_parkings_rent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:layout_below="@id/title_parkingxrent" />

                <TextView
                    android:id="@+id/title_pricexrent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rentPrice"
                    style="@style/font_title"
                    android:layout_marginTop="@dimen/margin_four"
                    android:layout_below="@id/fr_parkings_edt_parkings_rent"/>

                <EditText
                    android:id="@+id/fr_parkings_edt_price_rent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:focusable="false"
                    android:enabled="false"
                    android:layout_below="@id/title_pricexrent" />

                <TextView
                    android:id="@+id/title_parkingsxmtto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/parkingsmtto"
                    style="@style/font_title"
                    android:layout_marginTop="@dimen/margin_four"
                    android:layout_below="@id/fr_parkings_edt_price_rent"/>

                <EditText
                    android:id="@+id/fr_parkings_edt_parkings_mtto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:layout_below="@id/title_parkingsxmtto" />

                <TextView
                    android:id="@+id/title_pricexmtto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mttoPrice"
                    style="@style/font_title"
                    android:layout_marginTop="@dimen/margin_four"
                    android:layout_below="@id/fr_parkings_edt_parkings_mtto"/>

                <EditText
                    android:id="@+id/fr_parkings_edt_price_mtto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:focusable="false"
                    android:enabled="false"
                    android:layout_below="@id/title_pricexmtto" />

                <Button
                    android:id="@+id/fr_parkings_btn_request"
                    style="@style/BlueButton"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:layout_marginStart="@dimen/margin_twelve"
                    android:layout_marginEnd="@dimen/margin_twelve"
                    android:layout_marginTop="@dimen/margin_thirtytwo"
                    android:elevation="@dimen/raised_button"
                    android:text="@string/request"
                    android:layout_below="@id/fr_parkings_edt_price_mtto"
                    />

                <Button
                    android:id="@+id/fr_parkings_btn_request_cancel"
                    style="@style/BlueButtonStroke"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:layout_marginStart="@dimen/margin_twelve"
                    android:layout_marginEnd="@dimen/margin_twelve"
                    android:layout_marginTop="@dimen/margin_two"
                    android:layout_marginBottom="@dimen/margin_sixteen"
                    android:elevation="@dimen/raised_button"
                    android:text="@string/cancel"
                    android:layout_below="@id/fr_parkings_btn_request"
                    />

            </RelativeLayout>
        </android.support.v7.widget.CardView>

    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>
</FrameLayout>
