<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:contentDescription="@string/content_description"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/img_menu_back"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <Button
            android:id="@+id/act_menu_payment"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/ic_payment"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="@dimen/margin_eigth"
            android:layout_marginTop="@dimen/margin_eigth"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/consulta_de_pagos"
            style="@style/font_body_light"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/act_menu_payment"
            />
        <Button
            android:id="@+id/act_menu_maintenance"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/ic_payment"
            android:layout_centerInParent="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mantenimiento"
            style="@style/font_body_light"
            android:layout_below="@id/act_menu_maintenance"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/margin_eigth"
            />
        <TextView
            android:id="@+id/act_menu_txt_ticket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ticket"
            style="@style/font_body_light"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/margin_eigth"
            />
        <Button
            android:id="@+id/act_menu_ticket"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/ic_payment"
            android:layout_centerHorizontal="true"
            android:layout_above="@id/act_menu_txt_ticket"
            android:layout_marginBottom="@dimen/margin_eigth"
            />

    </RelativeLayout>
</android.widget.RelativeLayout>
